# xchat-app

./: .env.example  .env.production.local.bak24  .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: release-mac.sh
src/: App.tsx  app.css  env.d.ts  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: index.ts
src/components/: Dialog.tsx  Dropdown.tsx  KBFilesPanel.tsx  LocalKBPanel.tsx  MarkdownRenderer.tsx  ProviderSettings.tsx  SchedulePanel.tsx  SettingsModal.tsx  UpdateBanner.tsx  WikiPanel.tsx
src/lib/: local-kb.ts  xchat-api-shim.ts
src/store/: chatStore.ts  db.ts  providerStore.ts  searchStore.ts  uiStore.ts
