[package]
name = "xchat-tauri-poc"
version = "0.1.0"
description = "xChat — Tauri 2.x PoC"
authors = ["xCloudinfo"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "xchat_tauri_poc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# tauri-plugin-updater = "2"  # 留到 Phase 2 再加

[features]
custom-protocol = ["tauri/custom-protocol"]
